open link in new window

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
   font-family: 'Hind Siliguri', sans-serif;
   background-color: #ffe6e6;
-  padding-top: 50px;
+  padding-top: 140px;
 }
 
 * {
@@ -42,6 +42,10 @@ nav a:hover {
 }
 
 @media screen and (min-width: 700px) {
+  body {
+    padding-top: 50px;
+  }
+
   nav  ul {
     display: flex;
     justify-content: flex-end;
